@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-07T00:35:31Z",
-  "count" : 95,
-  "count_minmax" : [ 0, 95 ],
-  "count_prev_day_inc" : 80,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-20T00:38:22Z",
+  "count" : 90,
+  "count_minmax" : [ 90, 95 ],
+  "count_decinc" : [ -5, +0 ],
   "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
