@@ -1,15 +1,10 @@
 {
-  "count": 394,
+  "count": 346,
   "uniques": 3,
   "views": [
     {
-      "timestamp": "2022-05-05T00:00:00Z",
-      "count": 46,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 95,
+      "count": 90,
       "uniques": 1
     },
     {
@@ -65,6 +60,11 @@
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 14,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
