@@ -1,3 +1,10 @@
+2022-05-20T00:38:22Z:
+* notice: last 14d: unq all: 3 346
+* notice: prev accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1539
+* notice: next accum: outdated-unq outdated-all / unq all: 72 1204 / 86 1550
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -5 / +1 +3 -0 -0 / 1 3
+* notice: changed dates: [2022-05-06 2022-05-19]
+
 2022-05-19T16:27:44Z:
 * notice: last 14d: unq all: 3 394
 * notice: prev accum: outdated-unq outdated-all / unq all: 71 1145 / 85 1552
